--- a/index.html
+++ b/index.html
@@ -3,3 +3,6 @@
 <h2>A big thanks to EMORI & Pafrank for this one in a life time opportunity</h2>
 
 <h3>I'm definitely going to be a good developer because I'm good at what I do & I'm the best of my kind.</h3>
+
+<h4>I've always believed that No act of Kindness is ever wasted no matter how small.</h4>
+<h5>You guys are making coding enjoyable that once seemed fearsome. I'm ready to run this race to the finish line. 💖</h5>
